...
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>

    <string name="menu.decline">Decline</string>
    <string name="menu.contact">Contact</string>
    <string name="menu.support">Support</string>
    <string name="action_go_online">OFFLINE</string> <!-- button indicates current state, not action -->
    <string name="action_go_offline">ONLINE</string> <!-- button indicates current state, not action -->
    <string name="action_sync">SYNC</string>
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>

    <string name="car_type_save_warning">Please select at least one car category</string>
    <string name="ride_request_change_error">You cannot change ride type during trip.</string>
    <string name="ride_request_please_select">Please select car type</string>
    <string name="ride_request_description">Your current ride request type is now set to the following categories. You are set to receive:\n\n</string>
...
    <string name="text_this_week">This Week:</string>
    <string name="text_header_number_nof_trips">NUMBER\nOF TRIPS</string>
    <string name="text_header_total_fare">TOTAL\nFARE</string>
    <string name="text_header_total_ra_fee">TOTAL RA\nFEE</string>
    <string name="text_header_total_earnings">TOTAL\nEARNINGS</string>
    <string name="ride_cancelled">Trip was cancelled</string>
    <string name="ride_cancelled_by_rider">%1$s has cancelled the ride.</string>
    <string name="ride_cancelled_by_rider_with_fee">%1$s has cancelled the ride. You will receive $%2$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_with_fee">Your ride has been cancelled. You will receive $%1$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_without_fee">Your ride has been cancelled.</string>
    <string name="ride_cancelled_by_admin">Ride is cancelled by administrator</string>
    <string name="text_contact_rider_dialog">How do you want to contact your rider?</string>
    <string name="text_daily_earnings">Daily Earnings</string>
...
    <string name="terms_message">Review and approve the changes on Driver terms and conditions</string>
    <string name="terms_last_updated">LAST UPDATE: %s</string>
    <string name="terms_check">I AGREE AND ACKNOWLEDGE</string>
    <string name="terms_button">ACCEPT</string>

    <!-- Ride upgrade -->
    <string name="upgrade_to_suv">Upgrade to SUV</string>
    <string name="no_type_available">No car type available to upgrade ride</string>
    <string name="upgrade_waiting_rider">Waiting for Rider’s Confirmation</string>
    <string name="upgrade_cancel">Cancel Upgrade</string>
    <string name="upgrade_requested">Upgrade Requested</string>
    <string name="upgrade_rider_confirmed">Rider confirmed</string>
    <string name="upgraded_to_suv">Upgraded to SUV</string>
    <string name="upgrade_rider_denied">Rider denied</string>
    <string name="upgrade_expired">Request expired</string>

    <string name="foreground_service_online">You are online</string>
    <string name="foreground_service_marked_as_offline">Marked as offline</string>

...
