...
                    tools:text="@string/btn_no" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/single_action"
            style="@style/RATextView.MontserratRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visible_part"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
...
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="@{viewModel.dialogType == RADialogType.SINGLE_ACTION}"
            tools:text="Cancel Upgrade" />

        <ImageButton
            android:id="@+id/dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/single_action"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@drawable/icn_cancel"
...
